Fix buttons wrap

--- a/poet/style.css
+++ b/poet/style.css
@@ -35,6 +35,7 @@ a:link, a:visited {
     display: flex;
     justify-content: center;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .button {
